--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,6 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mergington High School Activities</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>
+      /* Participants section styling */
+      .participants-section {
+        margin-top: 0.5em;
+        background: #f7f9fa;
+        border-radius: 6px;
+        padding: 0.5em 1em;
+      }
+      .participants-list {
+        margin: 0.25em 0 0 1em;
+        padding: 0;
+        list-style-type: disc;
+        color: #2d3a4a;
+      }
+      .participant-item {
+        margin-bottom: 0.15em;
+        font-size: 0.97em;
+      }
+      .no-participants {
+        color: #888;
+        font-style: italic;
+        margin: 0.25em 0 0 0;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -38,6 +62,16 @@
           <button type="submit">Sign Up</button>
         </form>
         <div id="message" class="hidden"></div>
+      </section>
+
+      <section class="participants-section">
+        <h3>Participants</h3>
+        <ul class="participants-list">
+          <!-- Participant names will be loaded here -->
+          <li class="participant-item">John Doe</li>
+          <li class="participant-item">Jane Smith</li>
+        </ul>
+        <p class="no-participants hidden">No participants yet.</p>
       </section>
     </main>
 
