Refactor footer and participants section in HTML and CSS for improved layout and styling

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -63,15 +63,15 @@
         </form>
         <div id="message" class="hidden"></div>
       </section>
+    </main>
 
-      <section class="participants-section">
-        <h3>Participants</h3>
-        <ul class="participants-list">
-          <!-- Participant names will be loaded here -->
-          <li class="participant-item">John Doe</li>
-          <li class="participant-item">Jane Smith</li>
-        </ul>
-        <p class="no-participants hidden">No participants yet.</p>
+    <footer>
+      <p>&copy; 2023 Mergington High School</p>
+    </footer>
+
+    <script src="app.js"></script>
+  </body>
+</html>
       </section>
     </main>
 
